exports[`test renders ./components/message/demo/duration.md correctly 1`] = `
<button
  class="ant-btn"
  type="button">
  <span>
    Customized display duration
  </span>
</button>
`;

exports[`test renders ./components/message/demo/info.md correctly 1`] = `
<button
  class="ant-btn ant-btn-primary"
  type="button">
  <span>
    Display normal message
  </span>
</button>
`;

exports[`test renders ./components/message/demo/loading.md correctly 1`] = `
<button
  class="ant-btn"
  type="button">
  <span>
    Display a loading indicator
  </span>
</button>
`;

exports[`test renders ./components/message/demo/other.md correctly 1`] = `
<div>
  <button
    class="ant-btn"
    type="button">
    <span>
      Success
    </span>
  </button>
  <button
    class="ant-btn"
    type="button">
    <span>
      Error
    </span>
  </button>
  <button
    class="ant-btn"
    type="button">
    <span>
      Warning
    </span>
  </button>
</div>
`;
